# NEAR

./: .gitignore  README.md
verse-ft/: Cargo.toml  build.sh
verse-ft/res/: verse_fungible_token.wasm
verse-ft/src/: constants.rs  lib.rs
