[package]
name = "verse-fungible-token"
version = "1.0.0"
authors = ["cryptovaibhav <cryptovaibhav1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
lazy_static = "1.4.0"
lazy-static-include = "3.1.1"
base64 = "0.13.0"